--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node .",
-    "docker": "docker build . --tag bot_passive:local",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/main.js",
+    "docker": "docker build . --tag bot_passive:local"
   },
   "author": "DevShimi92",
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.11.0",
     "dotenv": "^16.0.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.3",
+    "typescript": "^5.0.4"
   }
 }
